backward compatibility with get(0) instead of getFirst()